spacing fixxx

--- a/src/Card7/Card7.module.css
+++ b/src/Card7/Card7.module.css
@@ -11,7 +11,7 @@
   margin: 30px;
   font-family: "fraunces";
   text-align: center;
-  font-size: 30px;
+  font-size: 40px;
   color: rgb(255, 30, 0);
 }
 
